[tool.poetry]
name = "m269-lib"
version = "0.0.1"
description = "A pedagogical algorithms and data structures library"
authors = ["Michel Wermelinger <michel.wermelinger@open.ac.uk>"]
readme = "README.md"
license = "BDS-3-Clause"
homepage = "https://dsa-ou.github.io/m269-lib/"
repository = "https://github.com/dsa-ou/m269-lib"
keywords = ["algorithms", "data structures", "education"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: BSD License",
    "Topic :: Education",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
    ]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pre-commit = "^3.6.0"
ruff = "^0.1.9"
pytype = "^2023.12.18"
pdoc = "^14.3.0"

[tool.pytest.ini_options]
addopts = "--cov=m269_lib --cov-report term-missing --doctest-modules"

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["ALL"]
ignore = [              # ignore these rules:
    "ANN101",           # provide the type of `self`
    "SIM110",           # simplify for-loops with all() or any()
    "ISC001", "COM812", # these rules may conflict with the formatter
    ]

[tool.ruff.lint.pydocstyle]
convention = "pep257"   # this project's docstrings follow PEP 257

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
